Fix: spacing and text-breaking

--- a/public/css/icinga/menu.less
+++ b/public/css/icinga/menu.less
@@ -301,6 +301,8 @@
 
         &:first-of-type {
           padding-left: 1.5em;
+          text-overflow: ellipsis;
+          overflow: hidden;
         }
       }
 
